// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLink handles children 1`] = `
<StyledLinkBase
  className="insights-link"
  href="test"
  target="_blank"
>
  link text
</StyledLinkBase>
`;

exports[`NewTabLink renders content with custom className 1`] = `
<StyledLinkBase
  className="insights-link custom-class"
  href="test"
  target="_blank"
/>
`;

exports[`NewTabLink renders content without custom className 1`] = `
<StyledLinkBase
  className="insights-link"
  href="test"
  target="_blank"
/>
`;
